// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label sync reporter correctly generates empty additions report 1`] = `
"This is an autogenerated report for your project.
(dry run: "false")

New Labels: (0)
No new labels.

Updated Labels: (1)
- basic

Removed Labels: (1)
- basic

"
`;

exports[`label sync reporter correctly generates empty removals report 1`] = `
"This is an autogenerated report for your project.
(dry run: "false")

New Labels: (1)
- basic

Updated Labels: (1)
- basic

Removed Labels: (0)
No removed labels.

"
`;

exports[`label sync reporter correctly generates empty updates report 1`] = `
"This is an autogenerated report for your project.
(dry run: "false")

New Labels: (1)
- basic

Updated Labels: (0)
No updated labels.

Removed Labels: (1)
- basic

"
`;

exports[`label sync reporter correctly generates report 1`] = `
"This is an autogenerated report for your project.
(dry run: "false")

New Labels: (1)
- test
  Testing sync.

Updated Labels: (0)
No updated labels.

Removed Labels: (3)
- bug/no-reproduction
- basic
- kind/bug

"
`;

exports[`label sync reporter generates correct empty report 1`] = `"No changes to labels in the repository."`;
